--- a/scene/one/companion-app-beta/index.html
+++ b/scene/one/companion-app-beta/index.html
@@ -44,45 +44,7 @@
         <p class="linebreak"><i>This is a special announcement! The development office at Animat Habitat will begin a limited beta program in April 2026. And you are invited into a waiting room for our beta program, today. All you need is an Apple iOS or iPadOS device and an internet connection.</i></p>
 
         <h3 class="linebreak">A Companion App</h3>
-        <p>This all preceeds a comic book, a companion app, and an invitation to change the way we look at wildlife. The <i>White Elephant</i> comic book tells its story with pictures and poems and so on. Its companion app gives life to those pictures and poems and so on. And its invitation calls upon the commercial audience to interact with the art and story&hellip; And then act in response.</p>
-
-        <p class="linebreak">Prior to the publication of that comic book and companion app, this preliminary invitation to a limited beta program calls upon a number&mdash;up to a hundred of you to help the development office at Animat Habitat review the accessibility of our companion app interface design. A first feature experience of our companion app is an interactive story mode designed for the <i>White Elephant</i> comic book. The companion app is in production at Animat Habitat with Apple Xcode Integrated Development Environment and Unity Real-Time Development Platform. The latest beta version of this companion app is made available through the TestFlight app for iOS and iPadOS. The TestFlight app is available on the Apple App Store.<sup>&nbsp;[<a class="button" onclick="fn();" title="Beta memberships.">1</a>]</sup></p>
-
-        <!-- <p class="linebreak">Apple Developer Page: <a href="../../../url/-com/apple-testflight/" title="" target="_blank" rel="noopener">Testflight</a></p> -->
-
-        <h3 class="linebreak">Beta Program</h3>
-        <p>Our beta program aims to assess accessiblility of the companion app interface design, in general, and of the interactive story mode, in particular. That aim, stated more simply, is to make this experience more accessible to more people. Also given an objective to collect a balanced range of feedback from, again simply, a sample of people who operate an Apple iPhone, this limited beta program obliges we share the beta version of our companion app with a broad demographic within that select audience.</p>
-
-        <p class="linebreak">Those people who are included in our beta program will be among the first to entertain the companion app, the <i>White Elephant</i> comic book and its interactive story. Any constructive feedback surveyed from this program will help to shape the commercial version of the companion app. We hope to hear from a diversity of voices. We hope to hear from you. Membership to this beta program is made available only to people registered in a beta program waiting room at Animat Habitat. Enter <a href="../../../app/beta/" title="Animat Habitat beta.">Beta Programs</a>.</p>
-
-        <h5 class="linebreak">Beta App on iOS and iPadOS</h5>
-        <p>Add your name to the beta program waiting room for Apple iPhone or iPad users: <a href="../../../app/beta/ios-ipados/" title="Beta: Companion App on iOS and iPadOS" target="_blank">Beta Room</a>.</p>
-
-        <h5 class="linebreak">Beta App on macOS</h5>
-        <p>The beta program for Apple Mac users is to be determined.</p>
-
-        <h5 class="linebreak">Beta App on Android</h5>
-        <p>The beta program for Android users is to be determined.</p>
-
-        <h5 class="linebreak">Beta App Feedback</h5>
-        <p>We welcome your feedback! Your input is invaluable in helping to develop a better experience for everyone who discovers the <i>White Elephant</i> comic book and its companion app later on. If you find any bugs in a beta version of the companion app, or have suggestions for an improvement, please use our dedicated feedback form for beta versions of the companion app: <a href="../../../app/beta/" title="Beta: Companion App Feedback Form" target="_blank">Beta App Feedback Form</a>.</p>
-
-        <p class="linebreak">For anything related to a beta version of the companion app, please feel free to send specific feedback to the beta program development office at Animat Habitat [<a href="mailto:beta@animathabitat.org" title="Address of the beta program development office at Animat Habitat." target="_blank">beta&ndash;animathabitat.org</a>].</p>
-
-      </div>
-
-      <div class="gutter-tobo"><div class="color text-center"><h3 class="linebreak">Help give life to the wild places.</h3><h5>You can support Animat Habitat in a few ways.</h5><div class="triptych">
-
-            <div class="gutter-small"><a href="../../../patron/" title="Animat Habitat patrons." target="_blank"><button class="text-center title">Donate</button></a></div>
-
-            <div class="gutter-small"><a href="../../../boutique/" title="Animat Habitat boutique." target="_blank"><button class="text-center title">Shop</button></a></div>
-
-            <div class="gutter-small"><a href="../../../rss/" title="Animat Habitat broadcast." target="_blank"><button class="text-center title">Subscribe</button></a></div></div></div>
-
-      </div>
-
-      <div class="quote" id="footnotes">
-        <p class="small"><sup>1</sup> Access to any beta version of the companion app on iOS and iPadOS is limited by the number of internal test memberships available to a developer account at Apple. Membership to our beta program is queued, and made available only to people registered in a beta program waiting room at Animat Habitat [<a href="../../../app/beta/ios-ipados/" title="Beta: Companion App on iOS and iPadOS" target="_blank">Beta Room</a>].</p>
+        <p>Article in review.</p>
 
       </div>
 
