--- a/boutique/exit/index.html
+++ b/boutique/exit/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat boutique. Exit. &ndash;&nbsp;Sortie.</title>
+  <title>Animat Habitat boutique. Exit, Sortie.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../inc/css/dark.light.unicorn.css" />
@@ -26,7 +26,7 @@
     <ul class="page">
       <li class="crumb logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../" title="Animat Habitat boutique.">Boutique</a></li>
-      <li class="crumb active"><a><i>Exit</i></a></li>
+      <li class="crumb active"><a><i>Exit<font class="toggle-form-full fr">, Sortie</font></i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
