--- a/boutique/index.html
+++ b/boutique/index.html
@@ -42,9 +42,9 @@
     <div class="quote text-center">
       <h1 class="title"><font class="color-reset">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></font></h1>
       <h3>
-        <a href="medium/digital-numerique/" title="Animat Habitat boutique. Digital editions. &ndash;&nbsp;&Eacute;ditions num&eacute;riques."><font class="overscore">Digital Editions</font></a><font class="fr">&nbsp;&#92;&nbsp;num&eacute;riques</font>
-         &middot; <a href="medium/giclee/" title="Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es."><font class="overscore">Gicl&eacute;e Prints</font></a><font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font>
-         <!-- &middot; <a href="medium/original/" title="Animat Habitat boutique. Traditional Artworks. &ndash;&nbsp;Oeuvres traditionels."><font class="overscore">Artworks</font></a><font class="fr">&nbsp;&#92;&nbsp;Oeuvres</font> -->
+        <a href="medium/digital-numerique/" title="Animat Habitat boutique. Digital editions, &Eacute;ditions num&eacute;riques."><font class="overscore">Digital Editions</font></a><font class="fr">&nbsp;&#92;&nbsp;num&eacute;riques</font>
+         &middot; <a href="medium/giclee/" title="Animat Habitat boutique. Gicl&eacute;e."><font class="overscore">Gicl&eacute;e Prints</font></a><font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font>
+         <!-- &middot; <a href="medium/original/" title="Animat Habitat boutique. Traditional artworks, Oeuvres traditionels."><font class="overscore">Artworks</font></a><font class="fr">&nbsp;&#92;&nbsp;Oeuvres</font> -->
       </h3>
     </div>
 
