--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="wildlife art print, wildlife art print canada, wildlife giclee, wildlife giclee canada, giclee shop" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es.</title>
+  <title>Animat Habitat boutique. Gicl&eacute;e.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
