--- a/conservation/index.html
+++ b/conservation/index.html
@@ -33,8 +33,8 @@
     <ul class="page">
       <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb active"><a><i>Conservation</i></a></li>
-      <!-- <li class="crumb btn"><a href="africa-afrique/" title="Animat Habitat &ndash; Africa. &ndash;&nbsp;Afrique.">Afr</a></li> -->
-      <!-- <li class="crumb btn"><a href="america-amerique/" title="Animat Habitat &ndash; North America. &ndash;&nbsp;Am&egrave;rique du Nord.">N&nbsp;A</a></li> -->
+      <!-- <li class="crumb btn"><a href="africa-afrique/" title="Animat Habitat conservation. Africa, Afrique.">Afr</a></li> -->
+      <!-- <li class="crumb btn"><a href="america-amerique/" title="Animat Habitat conservation. North America, Am&egrave;rique du Nord.">N&nbsp;A</a></li> -->
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -106,7 +106,7 @@
 
             </ul>
 
-            <p class="linebreak">More about conservation in <a href="africa-afrique/" title="Animat Habitat &ndash; Africa. &ndash;&nbsp;Afrique.">Africa</a>.<font class="fr">&nbsp;&#92;&nbsp;En savoir plus sur la conservation en Afrique.</font></p>
+            <p class="linebreak">More about conservation in <a href="africa-afrique/" title="Animat Habitat conservation. Africa, Afrique.">Africa</a>.<font class="fr">&nbsp;&#92;&nbsp;En savoir plus sur la conservation en Afrique.</font></p>
 
             <!-- <h5 class="linebreak"><font class="overscore">Conservation in North America</font><font class="fr">&nbsp;&#92;&nbsp;en Am&eacute;rique du Nord </font>:</h5>
 
