--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   <nav>
     <ul class="home">
       <li class="crumb logo"><a title="Animat Habitat"><img src="inc/svg/animat.mark.1.1.1200.dark.svg" class="logo" alt="Animat Mark (Dark) &copy; Animat Habitat, 2015" /></a></li>
-      <li class="crumb btn color-one"><a href="scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
-      <!-- <li class="crumb btn color-two"><a href="scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">II</a></li> -->
-      <!-- <li class="crumb btn color-three"><a href="scene/three/" title="Animat Habitat scene three. &ndash;&nbsp;sc&egrave;ne trois.">III</a></li> -->
+      <li class="crumb btn color-one"><a href="scene/one/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
+      <!-- <li class="crumb btn color-two"><a href="scene/two/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux.">II</a></li> -->
+      <!-- <li class="crumb btn color-three"><a href="scene/three/" title="Animat Habitat scene three. &verbar;&nbsp;sc&egrave;ne trois.">III</a></li> -->
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
       <li class="right btn"><a href="patron/" title="Animat Habitat patrons.">Patron</a></li>
       <li class="right btn"><a href="boutique/" title="Animat Habitat boutique.">Boutique</a></li>
@@ -77,8 +77,8 @@
         </div>
 
         <div>
-          <a class="project-thumbnail" href="scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">
-            <img src="inc/img/01/we.cover.banner.480-160.jpg" width="480" height="160" alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;&nbsp;art de couverture." />
+          <a class="project-thumbnail" href="scene/one/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">
+            <img src="inc/img/01/we.cover.banner.480-160.jpg" width="480" height="160" alt="Animat Habitat scene one: White Elephant cover art, 2024." />
             <div class="bg-one">
               <h3><font class="color-one">I&nbsp; White Elephant (&ndash;)</font></h3>
               <p>Journey with an elephant across a sea of sand&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife.<font class="fr">&nbsp;&#92;&nbsp;Voyageons avec un &eacute;l&eacute;phant &agrave; travers une mer de sable &mdash; une bande dessin&eacute;e, une application compagnon et une invitation &agrave; changer la fa&ccedil;on dont nous regardons la nature.</font></p>
