--- a/index/index.html
+++ b/index/index.html
@@ -2,7 +2,7 @@
 <html lang="en, fr">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self' 'unsafe-inline';" /> -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src 'unsafe-inline'; style-src fonts.googleapis.com 'self' 'unsafe-inline';" />
   <meta name="google" content="notranslate" />
 
   <meta name="company" content="Animat Habitat" />
@@ -46,27 +46,27 @@
         <p>Animat Habitat <a href="../patron/" title="Animat Habitat patrons.">Patron</a></p>
 
         <h5 class="linebreak title"><font class="color-one">I&nbsp; White Elephant</font></h5>
-        <p>Animat Habitat <a href="../scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
-        <p>Animat Habitat Scene One &ndash; <a href="../scene/one/making-of-ella/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
+        <p>Animat Habitat <a href="../scene/one/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
+        <p>Animat Habitat Scene One &ndash; <a href="../scene/one/making-of-ella/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
 
         <h5 class="linebreak title"><font class="color-two">II&nbsp; White Tiger</font></h5>
-        <p>Animat Habitat <a href="../scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
-        <p>Animat Habitat Scene Two &ndash; <a href="../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
+        <p>Animat Habitat <a href="../scene/two/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
+        <p>Animat Habitat Scene Two &ndash; <a href="../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
 
         <h5 class="linebreak title"><font class="color-three">III&nbsp; White Bear</font></h5>
-        <p>Animat Habitat <a href="../scene/three/" title="Animat Habitat scene three. &ndash;&nbsp;sc&egrave;ne trois.">Scene Three</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne trois</font></p>
-        <p>Animat Habitat Scene Three &ndash; <a href="../scene/three/history-of-whales-north-atlantic-right-whale/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. A History of Whales, Northern Atlantic Right Whale.">A History of Whales</a> &hellip;</p>
+        <p>Animat Habitat <a href="../scene/three/" title="Animat Habitat scene three. &verbar;&nbsp;sc&egrave;ne trois.">Scene Three</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne trois</font></p>
+        <p>Animat Habitat Scene Three &ndash; <a href="../scene/three/history-of-whales-anatomy/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux. A History of Whales, Anatomy.">A History of Whales</a> &hellip;</p>
 
         <h5 class="letterhead title">Boutique</h5>
         <p>Animat Habitat <a href="../boutique/" title="Animat Habitat boutique.">Boutique</a></p>
-        <p>Animat Habitat Boutique &ndash; <a href="../boutique/medium/digital-numerqiue/" title="Animat Habitat boutique. Digital editions. &ndash;&nbsp;&Eacute;ditions num&eacute;riques.">Digital Editions</a><font class="fr">&nbsp;&#92;&nbsp;&Eacute;ditions num&eacute;riques</font></p>
-        <p>Animat Habitat Boutique &ndash; <a href="../boutique/medium/giclee/" title="Animat Habitat boutique. Gicl&eacute;e prints. &ndash;&nbsp;Gicl&eacute;es.">Glic&eacute;e Prints</a><font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font></p>
-        <p>Animat Habitat Boutique &ndash; <a href="../boutique/medium/original/" title="Animat Habitat boutique. Traditional Artworks. &ndash;&nbsp;Oeuvres traditionels.">Traditional Artworks</a><font class="fr">&nbsp;&#92;&nbsp;Oeuvres traditionels</font></p>
+        <p>Animat Habitat Boutique &ndash; <a href="../boutique/medium/digital-numerqiue/" title="Animat Habitat boutique. Digital editions, &Eacute;ditions num&eacute;riques.">Digital Editions</a><font class="fr">&nbsp;&#92;&nbsp;&Eacute;ditions num&eacute;riques</font></p>
+        <p>Animat Habitat Boutique &ndash; <a href="../boutique/medium/giclee/" title="Animat Habitat boutique. Gicl&eacute;e.">Glic&eacute;e Prints</a><font class="fr">&nbsp;&#92;&nbsp;Gicl&eacute;es</font></p>
+        <p>Animat Habitat Boutique &ndash; <a href="../boutique/medium/original/" title="Animat Habitat boutique. Traditional artworks, Oeuvres traditionels.">Traditional Artworks</a><font class="fr">&nbsp;&#92;&nbsp;Oeuvres traditionels</font></p>
 
         <h5 class="letterhead title">Conservation</h5>
         <p>Animat Habitat <a href="../conservation/" title="Animat Habitat conservation.">Conservation</a></p>
         <p>Animat Habitat &ndash; Asia<font class="fr">&nbsp;&#92;&nbsp;Asie</font></p>
-        <p>Animat Habitat &ndash; <a href="../conservation/africa-afrique/" title="Animat Habitat &ndash; Africa. &ndash;&nbsp;Afrique.">Africa</a><font class="fr">&nbsp;&#92;&nbsp;Afrique</font></p>
+        <p>Animat Habitat &ndash; <a href="../conservation/africa-afrique/" title="Animat Habitat conservation. Africa, Afrique.">Africa</a><font class="fr">&nbsp;&#92;&nbsp;Afrique</font></p>
         <p>Animat Habitat &ndash; North America<font class="fr">&nbsp;&#92;&nbsp;Am&egrave;rique du Nord</font></p>
         <p>Animat Habitat &ndash; South America<font class="fr">&nbsp;&#92;&nbsp;Am&egrave;rique du Sud</font></p>
         <p>Animat Habitat &ndash; Arctic<font class="fr">&nbsp;&#92;&nbsp;Arctique</font></p>
