--- a/scene/one/book-of-ella/index.html
+++ b/scene/one/book-of-ella/index.html
@@ -29,7 +29,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
       <li class="crumb scene color"><a><i>Book of Ella Ch&nbsp;1</i></a></li>
     </ul>
   </nav>
@@ -56,7 +56,7 @@
       </div>
 
       <div>
-        <p><i>Story can also be entertainment. Story can be an escape: happily forever after. A story exists in its medium, and nonetheless the medium manifests a window back into our world. The story of <a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un."><i>White Elephant</i></a> is, likewise, a reflection of the way our world once was &ndash; and in part still is &ndash; wild.</i></p>
+        <p><i>Story can also be entertainment. Story can be an escape: happily forever after. A story exists in its medium, and nonetheless the medium manifests a window back into our world. The story of <a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un."><i>White Elephant</i></a> is, likewise, a reflection of the way our world once was &ndash; and in part still is &ndash; wild.</i></p>
 
         <h3 class="linebreak">Cover Story</h3>
         <p>Story at Animat Habitat is written in the context of challenges that people must take on today and in future&mdash;in a moment in human history when we have clear cause-and-effect on the state of the natural world. We the people enact our story together. Action!</p>
