--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -31,7 +31,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
       <li class="crumb scene color"><a><i>Elephant Conservation in Africa</i></a></li>
     </ul>
   </nav>
@@ -69,7 +69,7 @@
       <div>
         <p>The Tsavo bull was killed for his ivory in late May 2014.</p>
 
-        <p class="linebreak"><i>Species loss is forever.</i> Still, research in remaining natural strongholds in particular in East Africa suggests actionable and collective solutions are possible. We can come together in support of conservationists working with and within local African communities to sustain and protect vital habitats and migratory routes. <a title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un." href="../"><i>White Elephant</i></a>&mdash;a comic book and a companion app in part aims to promote the work of select wildlife foundations, funds, organizations and trusts that create positive change in Africa for this iconic animal.</p>
+        <p class="linebreak"><i>Species loss is forever.</i> Still, research in remaining natural strongholds in particular in East Africa suggests actionable and collective solutions are possible. We can come together in support of conservationists working with and within local African communities to sustain and protect vital habitats and migratory routes. <a title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un." href="../"><i>White Elephant</i></a>&mdash;a comic book and a companion app in part aims to promote the work of select wildlife foundations, funds, organizations and trusts that create positive change in Africa for this iconic animal.</p>
 
       </div>
 
