--- a/scene/one/history-of-elephants/index.html
+++ b/scene/one/history-of-elephants/index.html
@@ -31,7 +31,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
       <li class="crumb scene color"><a><i>A History of Elephants &ndash; Preface</i></a></li>
     </ul>
   </nav>
@@ -148,7 +148,7 @@
       <div>
         <p><i>The elephant &ndash; as a species &ndash; dates back to the Pliocene epoch, which means that the elephant has existed for more than ten times longer than the human temporal range. We have shared this world with elephants for as long as humans have existed. The wild elephant has a place in this world. Wild elephants must have space. We the people must preserve and protect the wild places and the animals that live in them.</i></p>
 
-        <p class="linebreak"><i>For a more complete history of humans and elephants, see: <a href="../history-of-elephants-ivory/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. A History of Elephant Conservation." target="_blank" rel="noopener">A History of Elephants &ndash; Ivory</a>, published at Animat Habitat for everyone who may learn and, once learned, who may be inspired to care for nature. It is the only thing that will cause people to care: knowing &ndash; and with knowing, and the caring that comes, there is cause for hope that people will find an enduring place for the natural world &ndash; the natural systems that keep all of us alive.</i></p>
+        <p class="linebreak"><i>For a more complete history of humans and elephants, see: <a href="../history-of-elephants-ivory/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un. A History of Elephant Conservation." target="_blank" rel="noopener">A History of Elephants &ndash; Ivory</a>, published at Animat Habitat for everyone who may learn and, once learned, who may be inspired to care for nature. It is the only thing that will cause people to care: knowing &ndash; and with knowing, and the caring that comes, there is cause for hope that people will find an enduring place for the natural world &ndash; the natural systems that keep all of us alive.</i></p>
 
       </div>
 
