--- a/scene/one/reference-art/index.html
+++ b/scene/one/reference-art/index.html
@@ -31,7 +31,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
       <li class="crumb scene color"><a><i>Reference Art &ndash; History</i></a></li>
     </ul>
   </nav>
@@ -43,7 +43,7 @@
         <h2 class="color">Reference Art</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
-        <p class="linebreak"><i>In the making of <a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">White Elephant</a>&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife&mdash;I have had a number of influences. This article introduces the project through its roots in art and story. In storytelling, like in design, we communicate with imagery that is familiar, symbolic and even iconic to drive focus to specific details carrying a unique visual tone. Here are some of the artworks that have championed the culture and design of wildlife art.</i></p>
+        <p class="linebreak"><i>In the making of <a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">White Elephant</a>&mdash;a comic book, a companion app and an invitation to change the way we look at wildlife&mdash;I have had a number of influences. This article introduces the project through its roots in art and story. In storytelling, like in design, we communicate with imagery that is familiar, symbolic and even iconic to drive focus to specific details carrying a unique visual tone. Here are some of the artworks that have championed the culture and design of wildlife art.</i></p>
 
       </div>
 
