--- a/scene/three/index.html
+++ b/scene/three/index.html
@@ -94,10 +94,16 @@
     <article>
       <div class="quote">
 
+        <h3><a href="history-of-whales-beluga/"><font class="color">A History of Whales &ndash; White Whale</font><font class="toggle-form-full"> &#47;&nbsp;<i>Nature</i></font></a></h3>
+        <pre class="thin"></pre>
+
         <h3><a href="history-of-whales-communication/"><font class="color">A History of Whales &ndash; White Noise</font><font class="toggle-form-full"> &#47;&nbsp;<i>Technology</i></font></a></h3>
         <pre class="thin"></pre>
 
         <h3><a href="history-of-whales-north-atlantic-right-whale/"><font class="color">A History of Whales &ndash; Black Whale</font><font class="toggle-form-full"> &#47;&nbsp;<i>Nature</i></font></a></h3>
+        <pre class="thin"></pre>
+
+        <h3><a href="history-of-whales-anatomy/"><font class="color">A History of Whales &ndash; Anatomy</font><font class="toggle-form-full"> &#47;&nbsp;<i>Nature</i></font></a></h3>
         <pre class="thin"></pre>
 
       </div>
