--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat app. Feedback. &ndash;&nbsp;Commentaires.</title>
+  <title>Animat Habitat app. Feedback, Commentaires.</title>
 
   <style>
     html { background-color: #333; }
