--- a/boutique/medium/digital-numerique/index.html
+++ b/boutique/medium/digital-numerique/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="wildlife digital art, wildlife digital painting, wildlife desktop background, wildlife wallpaper, digital art shop" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat boutique. Digital editions. &ndash;&nbsp;&Eacute;ditions num&eacute;riques.</title>
+  <title>Animat Habitat boutique. Digital editions, &Eacute;ditions num&eacute;riques.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
