--- a/patron/confirmation/index.html
+++ b/patron/confirmation/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat&hellip; Welcome. &ndash;&nbsp;Bienvenue.</title>
+  <title>Animat Habitat patrons. Welcome, Bienvenue.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../inc/css/dark.light.unicorn.css" />
@@ -40,12 +40,12 @@
         <p>For active and select council members, you can find documents of the organization archived and classified in the Animat Habitat <a href="../../s/" title="Animat Habitat member handbook.">Member Handbook</a>. For members of a project broadcast, a behind-the-scenes campaign will be delivered to your inbox in advance of project publications. You can find articles at Animat Habitat archived on the project pages.<font class="fr">&nbsp;&#92;&nbsp;Pour les membres actifs, retrouvez les documents d'organisation archiv&eacute;s et class&eacute;s dans le manuel des membres Animat Habitat. Pour les membres des mises &agrave; jour d'un projet, la campagne dans les coulisses sera livr&eacute;e &agrave; votre address e-mail en avance de la publication du projet. Veuillez trouver les articles chez Animat Habitat archiv&eacute;s sur les pages du projet.</font></p>
 
         <h5 class="linebreak title"><font class="color-one">I. White Elephant</font></h5>
-        <p>Animat Habitat <a href="../../scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
-        <p>Animat Habitat Scene One &ndash; <a href="../../scene/one/making-of-ella/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
+        <p>Animat Habitat <a href="../../scene/one/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
+        <p>Animat Habitat Scene One &ndash; <a href="../../scene/one/making-of-ella/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
 
         <h5 class="linebreak title"><font class="color-two">II. White Tiger</font></h5>
-        <p>Animat Habitat <a href="../../scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
-        <p>Animat Habitat Scene Two &ndash; <a href="../../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
+        <p>Animat Habitat <a href="../../scene/two/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
+        <p>Animat Habitat Scene Two &ndash; <a href="../../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
 
       </div>
 
