--- a/rss/confirmation/1/index.html
+++ b/rss/confirmation/1/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat&hellip; Welcome. &ndash;&nbsp;Bienvenue.</title>
+  <title>Animat Habitat&hellip; Welcome, Bienvenue.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
   <link rel="stylesheet" href="../../../inc/css/dark.light.unicorn.css" />
@@ -25,7 +25,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb active"><a><i>Welcome<font class="toggle-form-full"> &ndash; Bienvenue</font></i></a></li>
+      <li class="crumb active"><a><i>Welcome<font class="toggle-form-full fr">, Bienvenue</font></i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
@@ -40,12 +40,12 @@
         <p>For active and select council members, you can find documents of the organization archived and classified in the Animat Habitat <a href="../../../s/" title="Animat Habitat member handbook.">Member Handbook</a>. For members of a project broadcast, a behind-the-scenes campaign will be delivered to your inbox in advance of project publications. You can find articles at Animat Habitat archived on the project pages.<font class="fr">&nbsp;&#92;&nbsp;Pour les membres actifs, retrouvez les documents d'organisation archiv&eacute;s et class&eacute;s dans le manuel des membres Animat Habitat. Pour les membres des mises &agrave; jour d'un projet, la campagne dans les coulisses sera livr&eacute;e &agrave; votre address e-mail en avance de la publication du projet. Veuillez trouver les articles chez Animat Habitat archiv&eacute;s sur les pages du projet.</font></p>
 
         <h5 class="linebreak title"><font class="color-one">I. White Elephant</font></h5>
-        <p>Animat Habitat <a href="../../../scene/one/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
-        <p>Animat Habitat Scene One &ndash; <a href="../../../scene/one/making-of-ella/" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
+        <p>Animat Habitat <a href="../../../scene/one/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">Scene One</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne un</font></p>
+        <p>Animat Habitat Scene One &ndash; <a href="../../../scene/one/making-of-ella/" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
 
         <h5 class="linebreak title"><font class="color-two">II. White Tiger</font></h5>
-        <p>Animat Habitat <a href="../../../scene/two/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
-        <p>Animat Habitat Scene Two &ndash; <a href="../../../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
+        <p>Animat Habitat <a href="../../../scene/two/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux.">Scene Two</a><font class="fr">&nbsp;&#92;&nbsp;Sc&egrave;ne deux</font></p>
+        <p>Animat Habitat Scene Two &ndash; <a href="../../../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two. &verbar;&nbsp;sc&egrave;ne deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
 
         <h5 class="linebreak">Join as a patron.<font class="fr">&nbsp;&#92;&nbsp;Rejoignez-nous en tant que patron.</font></h5>
         <p>Receive a certificate of membership as an annual patron of the scenes in wildlife art or as a member of the Periwinkle or Silver council at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Recevez un certificat d'adh&eacute;sion annuel en tant que patron des sc&egrave;nes d'art de la nature ou en tant que membre du Conseil Bleu Pervenche ou Conseil Silver chez Animat Habitat.</font></p>
