--- a/scene/one/reference-art-2/index.html
+++ b/scene/one/reference-art-2/index.html
@@ -31,7 +31,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
       <li class="crumb scene color"><a><i>Reference Art &ndash; Imagery</i></a></li>
     </ul>
   </nav>
@@ -43,7 +43,7 @@
         <h2 class="color">Reference Art (cont'd)</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, animator at Animat Habitat.</h5>
 
-        <p class="linebreak"><i>This article is continued from Reference Art &ndash; <a href="../reference-art/" title="Reference for White Elephant">History</a>. This second part looks at some of the voices and pictures that helped inspire the comic book, companion app and invitation to change the way we look at wildlife&mdash;<a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">White Elephant</a>.</i></p>
+        <p class="linebreak"><i>This article is continued from Reference Art &ndash; <a href="../reference-art/" title="Reference for White Elephant">History</a>. This second part looks at some of the voices and pictures that helped inspire the comic book, companion app and invitation to change the way we look at wildlife&mdash;<a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">White Elephant</a>.</i></p>
 
         <h3 class="linebreak">Art Daydreams</h3>
         <p>It was 2011 and I was sitting at the Games for Change conference in New York City. Polaroid-like graphics swiped across the screen, but instead of a bunch of still images, each photo launched a short video clip. The idea for an animated wildlife comic book was born.<sup>&nbsp;[<a class="button" onclick="fn();" title="Games for Change">1</a>]</sup></p>
