--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -237,6 +237,9 @@
     <article>
       <div class="quote">
 
+        <h3><a href="the-beginning-of-printing/"><font class="color">The Beginning of Printing</font><font class="toggle-form-full"> &#47;&nbsp;<i>Art</i></font></a></h3>
+        <pre class="thin"></pre>
+
         <h3><a href="the-beginning-of-exhibiting/"><font class="color">The Beginning of Exhibiting</font><font class="toggle-form-full"> &#47;&nbsp;<i>Art</i></font></a></h3>
         <pre class="thin"></pre>
 
