--- a/scene/one/history-of-elephants-anatomy/index.html
+++ b/scene/one/history-of-elephants-anatomy/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src via.animathabitat.org 'self'; script-src s.animathabitat.org 'unsafe-inline'; style-src fonts.googleapis.com 'self' 'unsafe-inline';" />
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src via.animathabitat.org 'self'; script-src s.animathabitat.org 'unsafe-inline'; style-src fonts.googleapis.com 'self' 'unsafe-inline';" /> -->
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -31,7 +31,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
       <li class="crumb scene color"><a><i>A History of Elephants &ndash; Anatomy</i></a></li>
     </ul>
   </nav>
@@ -73,7 +73,15 @@
 
         <p class="linebreak">The tusks of an elephant bull will grow much larger than the elephant cow. An elephant bull with at least one tusk weighing in excess of 100 pounds is classified as a super-tusker. Each tusk can grow to two metres in length and, for some super-tuskers, up to about 200 pounds in weight in the course of a lifetime. Today, there are little more than twenty super-tuskers left on Earth, and their tusks do not exceed 150 pounds.<sup>&nbsp;[<a class="button" onclick="fn();" title="Currie, 2018">2</a>]</sup></p>
 
-        <p class="linebreak">For elephants, tusks are more than an indication of social stature. Elephants need their tusks to survive: to dig for roots and water and so on, to strip bark from trees, to clear pathways, and to defend themselves. Elephants are either left-tusked or right-tusked. The tusk that an elephant uses most will appear a bit more worn down.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
+        <p class="linebreak">For elephants, tusks are more than an indication of social stature. Elephants are either left-tusked or right-tusked. The tusk that an elephant uses most will appear a bit more worn down.</p>
+
+        <p class="linebreak">Elephants need their tusks to survive: to dig for roots and water and so on, to strip bark from trees, to clear pathways, and to defend themselves. Given a unique ability to smell water deep beneath the ground, elephants will use their tusks, along with their trunks and feet, to reach ground water that would otherwise be unreachable for all manner of smaller species. In this way, elephants have a disproportionately outsized impact on an ecosystem, with particular ecological importance as droughts become more severe and rains increasingly unpredictable.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
+
+        <!--
+
+          They are pillars of our natural world, both iconic and of great ecological importance. They are classified as a ‘keystone species,’ which means they have a disproportionately high impact on the ecosystem relative to their population.
+
+        -->
 
         <p class="linebreak"><i>No one needs a tusk other than an elephant.</i></p>
 
@@ -92,6 +100,7 @@
         <div class="quote" id="footnotes">
           <p class="small"><sup>1</sup> Elephant Aid International, Elephant Facts. <a href="../../../url/-org/elephantaidinternational-facts/" title="Elephant Aid International / Elephant Facts" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
           <p class="small"><sup>2</sup> Currie, J. <i>Last of the Big Tuskers</i>. Umboko Productions, 2018. <a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers&mdash;a film by James Currie." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup> Currie, J. <i>Last of the Big Tuskers</i>. Umboko Productions, 2018. <a href="../../../url/git/bigtuskers/" title="Last of the Big Tuskers&mdash;a film by James Currie." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -146,7 +155,9 @@
 
       <div class="clear-top">
         <h3 class="linebreak">Skin, Skull, Ears and Eyes</h3>
-        <p>African elephant skin is gray and wrinkled, is over an inch thick in places, and has no sweat glands. The wrinkled skin helps to store moisture and keep an elephant cooler for longer after dusting and wallowing and so on. The wrinkled skin also increases the surface area of the skin in contact with the air, allowing more blood that flows close to the surface to expel heat before recycling to the core.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
+        <p>African elephant skin is gray and wrinkled, is over an inch thick in places, and has no sweat glands. The wrinkled skin helps to store moisture and keep an elephant cooler for longer after dusting and wallowing and so on. The creases and folds of the wrinkled skin also increase the surface area of skin in contact with air, allowing more blood that flows close to the surface to expel heat before recycling to the core.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
+
+        <p class="linebreak">The pattern of wrinkles, veins, lumps and bumps on the skin of an elephant is unique to each individual, and for researchers, helps to identify an elephant among a herd.</p>
 
         <p class="linebreak">Elephant skin is covered with papillae, with hairs of varying color, length, thickness and all of which makes elephant skin highly sensitive. Elephants of the same herd will often greet each other with touch.<sup>&nbsp;[<a class="button" onclick="fn_4();" title="Laursen and Bekoff, 1978">7</a>]</sup></p>
 
@@ -170,9 +181,9 @@
       </div>
 
       <div>
-        <p>African elephant ears appear to resemble the shape of the African continent. This is different from Asian elephant ears which resemble the shape of India in Southwest Asia where they are found. Of course all elephants use their ears to hear. Elephants make &ndash; and listen for &ndash; a range of vocalizations, from high-pitched trumpets to infrasonic rumbles that resonate from miles away. Digital cushions on the soles of their feet indeed sense these distant rumbles, and then the skeletal structures of elephant forelegs and scapulae conduct these as vibrations to the inner ear.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">3</a>]</sup></p>
+        <p>African elephant ears appear to resemble the shape of the African continent. This is different from Asian elephant ears which resemble the shape of India in Southwest Asia where they are found. Elephants will display their big ears to communicate aggression and submission and so on.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
 
-        <p class="linebreak">Elephants will also display their big ears to communicate aggression and submission and so on.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
+        <p class="linebreak">Of course all elephants use their ears to hear. Elephants make &ndash; and listen for &ndash; a range of vocalizations, from high-pitched trumpets to infrasonic rumbles that resonate from miles away. Digital cushions on the soles of their feet indeed sense these distant rumbles, and then the skeletal structures of elephant forelegs and scapulae conduct these as vibrations to the inner ear. In this way, elephants are able to use infrasound to communicate over long distances.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">3</a>]</sup></p>
 
         <p class="linebreak">Elephants display a range of emotions, including demonstrating grief at the loss of herd members. Elephants have visited and revisited the bones of past herd members long after she has passed on, even when the sites happen to fall out of the way. An elephant has a spot on the sides of his or her head, behind each eye, which is at times darkened by the secretion of glands near the temporal lobe. These temporal glands are activated when an elephant is subject to highly charged situational stress or enters into hormonal responses, such as &ldquo;musth&rdquo;.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
 
@@ -211,27 +222,14 @@
         </div>
       </div>
 
-      <div>
-        <div class="color text-center">
+      <div class="gutter-tobo"><div class="color text-center"><h3 class="linebreak">Help give life to the wild places.</h3><h5>You can support Animat Habitat in a few ways.</h5><div class="triptych">
 
-          <h3 class="linebreak">Help give life to the wild places.</h3>
-          <h5>You can support Animat Habitat in a few ways.</h5>
+            <div class="gutter-small"><a href="../../../patron/" title="Animat Habitat patrons." target="_blank"><button class="text-center title">Donate</button></a></div>
 
-          <div class="triptych">
-            <div class="gutter-small">
-              <a href="../../../patron/" title="Animat Habitat patrons." target="_blank"><button class="text-center title">Donate</button></a>
-            </div>
+            <div class="gutter-small"><a href="../../../boutique/" title="Animat Habitat boutique." target="_blank"><button class="text-center title">Shop</button></a></div>
 
-            <div class="gutter-small">
-              <a href="../../../boutique/" title="Animat Habitat boutique." target="_blank"><button class="text-center title">Shop</button></a>
-            </div>
+            <div class="gutter-small"><a href="../../../rss/" title="Animat Habitat broadcast." target="_blank"><button class="text-center title">Subscribe</button></a></div></div></div>
 
-            <div class="gutter-small">
-              <a href="../../../rss/" title="Animat Habitat broadcast." target="_blank"><button class="text-center title">Subscribe</button></a>
-            </div>
-
-          </div>
-        </div>
       </div>
 
       <div class="clear article-navigation" role="navigation">
