--- a/rss/index.html
+++ b/rss/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Animat Habitat rss.</title>
+  <title>Animat Habitat broadcast.</title>
 
   <style>
     html { background-color: #333; }
@@ -30,7 +30,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb active"><a><i>RSS</i></a></li>
+      <li class="crumb active"><a><i>Broadcast<font class="fr">&#92;&nbsp;Mises&nbsp;&agrave;&nbsp;jour</font></i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
