--- a/scene/one/making-of-ella-2/index.html
+++ b/scene/one/making-of-ella-2/index.html
@@ -29,7 +29,7 @@
   <nav>
     <ul class="page">
       <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (One) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.one.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un.">I</a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene one. &verbar;&nbsp;sc&egrave;ne un.">I</a></li>
       <li class="crumb scene color"><a><i>Making of Ella Ch&nbsp;2</i></a></li>
     </ul>
   </nav>
@@ -57,27 +57,14 @@
 
       </div>
 
-      <!-- <div>
-        <div class="color text-center">
+      <!-- <div class="gutter-tobo"><div class="color text-center"><h3 class="linebreak">Help give life to the wild places.</h3><h5>You can support Animat Habitat in a few ways.</h5><div class="triptych">
 
-          <h3 class="linebreak">Help give life to the wild places.</h3>
-          <h5>You can support Animat Habitat in a few ways.</h5>
+            <div class="gutter-small"><a href="../../../patron/" title="Animat Habitat patrons." target="_blank"><button class="text-center title">Donate</button></a></div>
 
-          <div class="triptych">
-            <div class="gutter-small">
-              <a href="../../../patron/" title="Animat Habitat patrons." target="_blank"><button class="text-center title">Donate</button></a>
-            </div>
+            <div class="gutter-small"><a href="../../../boutique/" title="Animat Habitat boutique." target="_blank"><button class="text-center title">Shop</button></a></div>
 
-            <div class="gutter-small">
-              <a href="../../../boutique/" title="Animat Habitat boutique." target="_blank"><button class="text-center title">Shop</button></a>
-            </div>
+            <div class="gutter-small"><a href="../../../rss/" title="Animat Habitat broadcast." target="_blank"><button class="text-center title">Subscribe</button></a></div></div></div>
 
-            <div class="gutter-small">
-              <a href="../../../rss/" title="Animat Habitat broadcast." target="_blank"><button class="text-center title">Subscribe</button></a>
-            </div>
-
-          </div>
-        </div>
       </div> -->
 
       <div class="clear article-navigation" role="navigation">
