--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -54,8 +54,8 @@
     <a onclick="toggle_preview();">
       <section class="single">
         <div class="text-center">
-          <img alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;art de couverture." class="matte-preview" src="../../inc/img/boutique/01/white-elephant.2023.cover.preview.1280.jpg" />
-          <p class="linebreak"><i>White Elephant</i> &ndash; Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola&ndash;Botswana&ndash;Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, &ndash;)</p>
+          <img alt="Animat Habitat scene one: White Elephant cover art, 2024." class="matte-preview" src="../../inc/img/boutique/01/white-elephant.2024.cover.preview.800.jpg" />
+          <p class="linebreak"><i>White Elephant</i> &ndash; Kalahari basin<font class="fr">&nbsp;&#92;&nbsp;Bassin du Kalahari</font>, Angola&ndash;Botswana&ndash;Namibia<font class="fr">&nbsp;&#92;&nbsp;Namibie</font> (comic book<font class="fr">&nbsp;&#92;&nbsp;bande dessin&eacute;e</font>, &ndash; 2028)</p>
         </div>
 
       </section>
@@ -66,7 +66,7 @@
     <section class="single">
       <div class="clear-bottom">
         <a onclick="toggle_preview();">
-          <img alt="Animat Habitat scene one. &ndash;&nbsp;sc&egrave;ne un. White Elephant cover art. &ndash;art de couverture." class="matte matte-fold" src="../../inc/img/boutique/01/white-elephant.2023.cover.fold.720-180.jpg" />
+          <img alt="Animat Habitat scene one: White Elephant cover art, 2024." class="matte matte-fold" src="../../inc/img/boutique/01/white-elephant.2024.cover.fold.800.jpg" />
 
         </a>
       </div>
