--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -348,6 +348,9 @@
       <p class="linebreak small"><font class="title">Mokogodo</font></p>
       <p class="small"><font class="small">Nairobi (2022-2024)</font></p>
 
+      <p class="linebreak small"><font class="title">Paolo</font></p>
+      <p class="small"><font class="small">Amboseli (1979-2025)</font></p>
+
     </div>
 
   </footer>
