--- a/c/index.html
+++ b/c/index.html
@@ -99,7 +99,7 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Please address any question or concern about these terms and conditions to the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org" title="Address of the secretariat at Animat Habitat.">support&ndash;animathabitat.org</a>].</p>
+      <p class="small">Please address any question or concern about these terms and conditions to the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org" title="Address of the secretariat at Animat Habitat.">support&nbsp;&ndash;&nbsp;animathabitat.org</a>].</p>
 
     </div>
 
