--- a/patron/index.html
+++ b/patron/index.html
@@ -111,7 +111,7 @@
 
           <div class="color" id="silver-council">
 
-            <p>For secure wiring instructions, please contact the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org?subject=Silver%C2%A0Council" title="Address of the secretariat at Animat Habitat." target="_blank">support&nbsp;&ndash;&nbsp;animathabitat.org</a>]. <font class="fr">&#92;&nbsp;Pour obtenir des instructions de virement s&eacute;curis&eacute;, veuillez contacter le secr&eacute;tariat chez Animat Habitat.</font></p>
+            <p>For secure wiring instructions, please contact the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org?subject=Instructions,%C2%A0Silver" title="Address of the secretariat at Animat Habitat." target="_blank">support&nbsp;&ndash;&nbsp;animathabitat.org</a>]. <font class="fr">&#92;&nbsp;Pour obtenir des instructions de virement s&eacute;curis&eacute;, veuillez contacter le secr&eacute;tariat chez Animat Habitat.</font></p>
 
           </div>
 
