--- a/patron/index.html
+++ b/patron/index.html
@@ -60,7 +60,7 @@
 
           <pre class="thin"></pre>
 
-          <p class="linebreak small">Your donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal. For a donation of more than CA$250 &ndash; and for secure wiring instructions &ndash; please contact the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org?subject=Instructions" title="Address of the secretariat at Animat Habitat." target="_blank" rel="noopener">support&nbsp;&ndash;&nbsp;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Votre don &ndash; incluant information de carte de d&eacute;bit ou de cr&eacute;dit &ndash; est accept&eacute; avec PayPal. Pour un don de plus de 250 $ CA &ndash; et pour obtenir des instructions de virement s&eacute;curis&eacute; &ndash; veuillez contacter le secr&eacute;tariat chez Animat Habitat.</font></p>
+          <p class="linebreak small">Your donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal. For a donation of more than CA$250 &ndash; and for secure wiring instructions &ndash; please contact the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org?subject=Instructions" title="Address of the secretariat at Animat Habitat." target="_blank" rel="noopener">support&nbsp;:&nbsp;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Votre don &ndash; incluant information de carte de d&eacute;bit ou de cr&eacute;dit &ndash; est accept&eacute; avec PayPal. Pour un don de plus de 250 $ CA &ndash; et pour obtenir des instructions de virement s&eacute;curis&eacute; &ndash; veuillez contacter le secr&eacute;tariat chez Animat Habitat.</font></p>
 
         </div>
 
@@ -111,7 +111,7 @@
 
           <div class="color" id="silver-council">
 
-            <p>For secure wiring instructions, please contact the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org?subject=Instructions,%C2%A0Silver" title="Address of the secretariat at Animat Habitat." target="_blank">support&nbsp;&ndash;&nbsp;animathabitat.org</a>]. <font class="fr">&#92;&nbsp;Pour obtenir des instructions de virement s&eacute;curis&eacute;, veuillez contacter le secr&eacute;tariat chez Animat Habitat.</font></p>
+            <p>For secure wiring instructions, please contact the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org?subject=Instructions,%C2%A0Silver" title="Address of the secretariat at Animat Habitat." target="_blank">support&nbsp;:&nbsp;animathabitat.org</a>]. <font class="fr">&#92;&nbsp;Pour obtenir des instructions de virement s&eacute;curis&eacute;, veuillez contacter le secr&eacute;tariat chez Animat Habitat.</font></p>
 
           </div>
 
@@ -192,7 +192,7 @@
   <footer class="single">
     <div class="quote">
 
-      <p class="small">Please address any question about donations at Animat Habitat to the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org" title="Address of the secretariat at Animat Habitat." target="_blank">support&nbsp;&ndash;&nbsp;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Adressez toute question concernant les dons chez Animat Habitat au secr&eacute;tariat chez Animat Habitat.</font></p>
+      <p class="small">Please address any question about donations at Animat Habitat to the secretariat at Animat Habitat [<a href="mailto:support@animathabitat.org" title="Address of the secretariat at Animat Habitat." target="_blank">support&nbsp;:&nbsp;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Adressez toute question concernant les dons chez Animat Habitat au secr&eacute;tariat chez Animat Habitat.</font></p>
 
       <p class="linebreak small">Thank you for your support.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre soutien.</font></p>
 
